--- a/helm-chart/splunk-connect-for-kubernetes/Chart.yaml
+++ b/helm-chart/splunk-connect-for-kubernetes/Chart.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 name: splunk-connect-for-kubernetes
 version: 1.1.0
+appVersion: 1.1.0
 description: Collect logs, objects (metadata), and metrics with Splunk.
 home: https://github.com/splunk/splunk-connect-for-kubernetes/tree/master/helm-chart
 sources:
