--- a/helm-chart/splunk-kubernetes-objects/Chart.yaml
+++ b/helm-chart/splunk-kubernetes-objects/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v1
 version: 1.1.0
+appVersion: 1.1.0
 name: splunk-kubernetes-objects
 description: Collect Kubernetes objects with Splunk.
 home: https://github.com/splunk/splunk-connect-for-kubernetes/tree/master/helm-chart/charts/splunk-kubernetes-objects
